added docs folder

--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -3,6 +3,13 @@
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+<link type=css/text "https://s3.amazonaws.com/www.jajb.us/assets/css/main.css"></link>
+<link type=css/text "https://s3.amazonaws.com/www.jajb.us/assets/css/photogallery.css"></link>
+<link type=css/text "https://s3.amazonaws.com/www.jajb.us/assets/css/aboutme.css"></link>
+<script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script>
 <head>
 {% include head.html %}
 </head>
@@ -37,7 +44,15 @@
   </footer>
 </div><!-- /.footer-wrapper -->
 
-{% include scripts.html %}          
+{% include scripts.html %}
 
 </body>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/scripts.min.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/respond.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/plugins/jquery.dlmenu.js"></script>
+<script src"https://s3.amazonaws.com/www.jajb.us/assets/js/plugins/jquery.fitvids.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/vendor/jquery-1.9.1.min.js"></script>
+
+
 </html>
