--- a/_layouts/aboutpage.html
+++ b/_layouts/aboutpage.html
@@ -2,7 +2,15 @@
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"><!--<![endif]-->
+<link type=css/text "https://s3.amazonaws.com/www.jajb.us/assets/css/main.css"></link>
+<link type=css/text "https://s3.amazonaws.com/www.jajb.us/assets/css/photogallery.css"></link>
+<link type=css/text "https://s3.amazonaws.com/www.jajb.us/assets/css/aboutme.css"></link>
+<script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script>
 <head>
   <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" src="/assets/css/aboutme.css">
@@ -57,4 +65,11 @@
 {% include scripts.html %}
 
 </body>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/scripts.min.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/respond.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/plugins/jquery.dlmenu.js"></script>
+<script src"https://s3.amazonaws.com/www.jajb.us/assets/js/plugins/jquery.fitvids.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script src="https://s3.amazonaws.com/www.jajb.us/assets/js/vendor/jquery-1.9.1.min.js"></script>
+
 </html>
