--- a/docs/assets/css/bootstrap-grid.css
+++ b/docs/assets/css/bootstrap-grid.css
@@ -1,8 +1,8 @@
 /*!
- * Bootstrap Grid v4.0.0 (https://getbootstrap.com)
+ * Bootstrap Grid v4.0.0 (httpss://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ * Licensed under MIT (httpss://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 @-ms-viewport {
   width: device-width;
